# pdf_parser

./: .gitignore  AI_USAGE.md  README.md  main.py  pyproject.toml
pdf_parser/: __init__.py  cli.py  extractor.py  models.py  normalization.py  parser.py  profiles.py  structure.py
tests/: test_end_to_end.py  test_normalization.py  test_parser.py  test_structure.py
