[project]
name = "pdf-parser"
version = "0.1.0"
description = "Menu PDF parser take-home prototype"
requires-python = ">=3.12"
dependencies = [
    "pdfplumber>=0.11.9",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[project.scripts]
parse-menu = "pdf_parser.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pdf_parser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
